<resources>
    <string name="app_name">AmmoCan</string>

    <string name="title_section1">News Feed</string>
    <string name="title_section2">Airmen List</string>

    <string name="login_error_message">Please enter a valid username/password</string>
    <string name="signup_error_message">User names must be at least 5 characters, Passwords must be at least 8 characters</string>
    <string name="password_error_message">Passwords don\'t match</string>
    <string name="signup_error_title">Yikes!</string>

    <string name="action_logout">Log out</string>
    <string name="title_activity_login">Login</string>

    <string name="app_title">AmmoCan</string>
    <string name="dev_title">A YukiDev Project</string>

    <string name="password_hint">Password</string>
    <string name="Username_hint">Username</string>
    <string name="log_in">Login</string>
    <string name="sign_up_text">Don\'t have an account? Sign up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <string name="signup_button_label">Sign up!</string>
    <string name="enter_password_hint">Password</string>
    <string name="password_again_hint">Password again</string>
    <string name="email_field">Enter an E-Mail address</string>
    <string name="username_login_hint">Enter a Username</string>
    <string name="no_messages">No current Messages</string>

    <string name="action_done">Done!</string>
    <string name="error_title">We\'re sorry!</string>
    <string name="add_friends_toast_label">Now add your supervisor or airmen with the dropdown menu in the upper right.</string>
    <string name="no_friends">You have no Supervisor or Airmen listed, add some!</string>

    <string name="action_hint">Action: (what you did...)</string>
    <string name="result_hint">Result: (What happened...)</string>
    <string name="impact_hint">Impact: (What did this action impact?)</string>
    <string name="find_supervisor_airmen_menu">Find Supervisor/Airmen</string>
    <string name="title_activity_message">Write Bullets</string>

    <string name="action_settings">Settings</string>
    <string name="action_download">Download</string>
    <string name="action_send_menu">Send</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error sending your message.  Please try again.</string>
    <string name="sorry">We/\'re sorry!</string>
    <string name="bullet_push_message">You have a new AmmoCan bullet from %s!</string>
    <string name="request_push_message">You have a new user add request from %s!</string>
    <string name="search_title">Search</string>
    <string name="bullet_title">Bullet Title</string>

    <array name="supervisor_airmen">
        <item name="find_supervisor">Add/Remove your Supervisor</item>
        <item name="find_airmen">Add/Remove your Airmen</item>
    </array>

    <string name="title_activity_view_message">View Bullet</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_delete">Delete</string>
    <string name="forgot_password_text">forgot Password?</string>
    <string name="title_activity_airman_bullets">Bullets List</string>
    <!--Real Ad ID-->
    <!--<String name="banner_ad_unit_id">ca-app-pub-7998491028752978/3341715049</String>-->
    <!--Test Ad ID-->
    <!--<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
    <string name="download_bullets_title">Download all Bullets?</string>
    <string name="download_bullets_message">Click OK to download all available bullets for this user</string>
    <string name="title_activity_edit_account">Edit Account Details</string>
    <string name="new_password">New password</string>
    <string name="current_email">Current Email</string>
    <string name="help_text">Currently, you can only have one user tagged as your supervisor.
        Bullets you write will go to the person tagged as your supervisor. \n \n To change your Supervisor,
        just search and add your new supervisor.\n \n To view all bullets from an airman, just tap
        an airman in your friend list. \n \n If you have problems with this app email yuki.developers@gmail.com. \n \n
        If you find this free app helpful, click an ad to support us!</string>
    <string name="password_change_empty_toast">Please fill out all three password fields, then click the button</string>
    <string name="new_password_length_error_toast">Passwords must be at least 8 characters</string>
    <string name="password_changed_toast">Password changed</string>
    <string name="completely_delete_message">This will COMPLETELY delete this bullet, there is no undo!</string>
    <string name="delete_request_or_bullet_title">Delete Request/Bullet?</string>
    <string name="request_or_bullet_deleted">Request/Bullet deleted</string>
    <string name="internet_connection_unavailable">Internet connection unavailable</string>
    <string name="see_my_bullets">See My Bullets</string>
    <string name="edit_account_or_help">Edit Account/Help</string>
    <string name="write_bullets">Write Bullets</string>
    <string name="clear_list">Clear List</string>
    <string name="clear_inbox_title">Clear Inbox?</string>
    <string name="clear_inbox_message">Click OK and refresh to clean out your inbox</string>
    <string name="welcome_action_message">Glad you made it! The screen you just came from is your inbox.  You\'ll see requests there when people want to add you as a supervisor or an airman, or you\'ll see when one of your airmen sends you a bullet.</string>
    <string name="welcome_result_message">This screen is where you\'ll view or write bullets.  To write a bullet, tap the pencil on the taskbar.  To view a bullet, just tap it!</string>
    <string name="welcome_impact_message">To add people, select the group icon with the plus sign up top.  From there you can choose to select your supervisor or select some airmen.  You can only have one supervisor at this time, but you can have as many airmen as you want.</string>
    <string name="remove_supervisor_airman_toast">Please remove supervisor with Add/Remove supervisor option</string>

</resources>
