<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.yukidev.ammocan.ui.LoginActivity"
                android:background="@drawable/bg_ocp_camo"
                android:theme="@android:style/Theme.NoTitleBar">

    <TextView
        android:id="@+id/appTitle"
        style="@style/AppTitle"/>
    <TextView
        android:id="@+id/devTitle"
        style="@style/DevTitle"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/TextLinearLayout">

        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/loginText"
            android:hint="@string/Username_hint"
            style="@style/EditText"/>
        <requestFocus />

        <EditText
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:layout_below="@+id/loginText"
            android:id="@+id/passwordField"
            style="@style/EditText"/>
    </LinearLayout>

    <Button
        android:text="@string/log_in"
        android:id="@+id/loginButton"
        android:layout_below="@+id/linearLayout"
        style="@style/ButtonStyle"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        android:id="@+id/signupText"
        android:textColor="#ff000000"
        android:textSize="20sp"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"/>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginProgressBar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>




</RelativeLayout>
