<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.yukidev.ammocan.ui.SignUpActivity"
                android:background="@drawable/bg_ocp_camo"
                android:theme="@android:style/Theme.NoTitleBar">


    <TextView
        android:id="@+id/appTitle"
        style="@style/AppTitle"/>
    <TextView
        android:id="@+id/devTitle"
        style="@style/DevTitle"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/TextLinearLayout">


        <EditText
            android:id="@+id/usernameField"
            android:inputType="textPersonName"
            android:hint="@string/username_login_hint"
            style="@style/EditText"/>
        <requestFocus />
    <LinearLayout
        android:id="@+id/linearLayout2"
        style="@style/TextLinearLayout"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/passwordField"
            android:inputType="textPassword"
            android:hint="@string/enter_password_hint"
            android:layout_weight="1"
            style="@style/EditText"/>
        <EditText
            android:id="@+id/passwordField2"
            android:inputType="textPassword"
            android:hint="@string/password_again_hint"
            android:layout_weight="1"
            style="@style/EditText"/>
    </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout3"
            style="@style/TextLinearLayout"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/lastNameText"
                android:hint="Last Name"
                android:layout_weight="1"
                style="@style/EditText"/>
            <EditText
                android:id="@+id/squadronText"
                android:hint="Sqadron"
                android:layout_weight="1"
                style="@style/EditText"/>
        </LinearLayout>
        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/emailField"
            android:hint="@string/email_field"
            style="@style/EditText"/>
    </LinearLayout>
    <Button
        android:text="@string/signup_button_label"
        android:id="@+id/signupButton"
        style="@style/ButtonStyle"/>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUpProgressBar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"/>

</RelativeLayout>

</ScrollView>